--- a/index.html
+++ b/index.html
@@ -42,49 +42,49 @@
                     <h1>Dashboard</h1>
                     <div class="container2">
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0010.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0010.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0011.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0011.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0012.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0012.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0014.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0014.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0017.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0017.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0018.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0018.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0019.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0019.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0020.jpg" width="100" height="100">
+                            <img src="Img/IMG-20220309-WA0020.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
