--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>2 Storm Sports and Stationery</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body id="main-box">
     <div class="main">
         <div class="side_menu">
             <h1>2STROM</h1>
@@ -33,7 +33,7 @@
         <div class="main_screen">
             <div class="nevigation_bar">
                 <div class="search">
-                    <input type="text" placeholder="Search..." />
+                    <input id="search" type="text" placeholder="Search..." oninput="search(document.getElementById('search').value)" />
                     <input type="button" value="Search" />
                 </div>
             </div>
@@ -42,49 +42,100 @@
                     <h1>Dashboard</h1>
                     <div class="container2">
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0010.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0010.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0011.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0011.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0012.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0012.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0014.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0014.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0017.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0017.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0018.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0018.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0019.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0019.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="Img/IMG-20220309-WA0020.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0020.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                    </div>
+
+                    <div class="container2">
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0010.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0011.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0012.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0014.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0017.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0018.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0019.jpg" width="100" height="100">
+                            <p>Upper</p>
+                            <p>Rs.1000</p>
+                            <p>25% OFF</p>
+                        </div>
+                        <div class="card">
+                            <img src="img/IMG-20220309-WA0020.jpg" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
@@ -239,6 +290,21 @@
                     </table>
                 </div>
             </div>
+        </div>
+        <div id="show">
+            <li><a href="#">Aim</a></li>
+            <li><a href="#">Boxing</a></li>
+            <li><a href="#">Cap</a></li>
+            <li><a href="#">Discus</a></li>
+            <li><a href="#">Enroll</a></li>
+            <li><a href="#">Flask</a></li>
+            <li><a href="#">Global</a></li>
+            <li><a href="#">High Kick</a></li>
+            <li><a href="#">Ink</a></li>
+            <li><a href="#">Jacket</a></li>
+            <li><a href="#">Kum Fu</a></li>
+            <li><a href="#">Long Jump</a></li>
+            <li><a href="#">Music</a></li>
         </div>
     </div>
     <script src="javascript/js.js"></script>
