--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>2 Storm Sports and Stationery</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body id="main-box">
     <div class="main">
         <div class="side_menu">
@@ -33,7 +35,8 @@
         <div class="main_screen">
             <div class="nevigation_bar">
                 <div class="search">
-                    <input id="search" type="text" placeholder="Search..." oninput="search(document.getElementById('search').value)" />
+                    <input id="search" type="text" placeholder="Search..."
+                        oninput="search(document.getElementById('search').value)" />
                     <input type="button" value="Search" />
                 </div>
             </div>
@@ -42,49 +45,49 @@
                     <h1>Dashboard</h1>
                     <div class="container2">
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0010.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0010.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0011.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0011.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0012.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0012.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0014.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0014.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0017.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0017.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0018.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0018.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0019.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0019.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0020.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0020.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
@@ -93,49 +96,49 @@
 
                     <div class="container2">
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0010.jpg" width="100" height="100">
+                            <img src="img/IMG-20211010-WA0009.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0011.jpg" width="100" height="100">
+                            <img src="img/IMG-20220305-WA0027.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0012.jpg" width="100" height="100">
+                            <img src="img/IMG-20220305-WA0031.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0014.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0026.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0017.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0028.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0018.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0038.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0019.jpg" width="100" height="100">
+                            <img src="img/IMG-20220309-WA0039.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
                         </div>
                         <div class="card">
-                            <img src="img/IMG-20220309-WA0020.jpg" width="100" height="100">
+                            <img src="img/IMG-20211010-WA0010.jpg" loading="lazy" width="100" height="100">
                             <p>Upper</p>
                             <p>Rs.1000</p>
                             <p>25% OFF</p>
@@ -309,4 +312,5 @@
     </div>
     <script src="javascript/js.js"></script>
 </body>
+
 </html>
