--- a/index.html
+++ b/index.html
@@ -294,6 +294,9 @@
                 </div>
             </div>
         </div>
+        <div class="message">
+            <p>Rotate Your Device To Landscape For Better Experience</p>
+        </div>
         <div id="show">
             <li><a href="#">Aim</a></li>
             <li><a href="#">Boxing</a></li>
